--- a/traffic/pages/switchcity/list.wxml
+++ b/traffic/pages/switchcity/list.wxml
@@ -7,12 +7,18 @@
     {{showLetter}}
 </view>
 </block>
+
 <!-- <view class="item_letter">当前选择城市</view>
-<view class="item_city">{{city}}</view>  -->
+<view class="item_city">{{city}}</view> -->
+
+<view class="item_letter">当前支持城市</view>
+<view data-id="14" data-name="山西省" bindtap="bindCity" class="scroll-view-item_H"><text class="{{activeId == 14?'section_sel_text':'section_text'}}">山西</text></view>
+<view data-id="13" data-name="河北省" bindtap="bindCity" class="scroll-view-item_H"><text class="{{activeId == 13?'section_sel_text':'section_text'}}">河北</text></view>
+
 <scroll-view scroll-y="true" style="height:{{winHeight}}px" bindscroll="bindScroll" scroll-top="{{scrollTop}}">
     <view class="selection" wx:for="{{cityList}}" wx:key="{{item.initial}}">
         <view class="item_letter">{{item.initial}}</view>
-        <view class="item_city" wx:for="{{item.cityInfo}}" wx:for-item="ct" wx:key="{{ct.id}}" data-id="{{ct.id}}" bindtap="bindCity">
+        <view class="item_city" wx:for="{{item.cityInfo}}" wx:for-item="ct" wx:key="{{ct.id}}" data-id="{{ct.id}}" data-name="{{ct.city}}" bindtap="bindCity">
               {{ct.city}}  
         </view>
     </view>
