--- a/history/pages/history/list.wxml
+++ b/history/pages/history/list.wxml
@@ -5,12 +5,12 @@
     <view class="th">建立者</view>
   </view>
   <block wx:for="{{listData}}" wx:key="{{code}}">
-    <view class="tr bg-g" wx:if="{{index % 2 == 0}}" data-id="{{item.id}}" catchtap="bindItemTap">
+    <view class="tr bg-g" wx:if="{{index % 2 == 0}}" data-id="{{item.id}}" data-dynasty="{{item.dynasty}}" catchtap="bindItemTap">
       <view class="td">{{item.dynasty}}</view>
       <view class="td">{{item.time}}</view>
       <view class="td">{{item.founder}}</view>
     </view>
-    <view class="tr" wx:else data-id="{{item.id}}" catchtap="bindItemTap">
+    <view class="tr" wx:else data-id="{{item.id}}" data-dynasty="{{item.dynasty}}" catchtap="bindItemTap">
       <view class="td">{{item.dynasty}}</view>
       <view class="td">{{item.time}}</view>
       <view class="td">{{item.founder}}</view>
