--- a/history/pages/detail/detail.wxml
+++ b/history/pages/detail/detail.wxml
@@ -1,23 +1,38 @@
-<view class="swiper-tab">  
-    <view class="swiper-tab-list {{currentTab==0 ? 'on' : ''}}" data-current="0" bindtap="swichNav">简介</view>  
-    <view class="swiper-tab-list {{currentTab==1 ? 'on' : ''}}" data-current="1" bindtap="swichNav">君主</view>  
-    <view class="swiper-tab-list {{currentTab==2 ? 'on' : ''}}" data-current="2" bindtap="swichNav">历史事件</view>  
-</view>  
-  
-<swiper current="{{currentTab}}" class="swiper-box" duration="300" style="height:{{winHeight - 31}}px" bindchange="bindChange">  
-    <swiper-item>  
-      <scroll-view scroll-y style="height:{{winHeight - 31}}px;">
-        <view>{{profile}}</view>
-      </scroll-view>
-    </swiper-item>  
-    <swiper-item>  
-      <scroll-view scroll-y style="height:{{winHeight - 31}}px;">
-        <view>{{emperor}}</view>
-      </scroll-view>
-    </swiper-item>  
-    <swiper-item>  
-      <scroll-view scroll-y style="height:{{winHeight - 31}}px;">
-        <view>{{milestone}}</view>
-      </scroll-view>
-    </swiper-item>  
-</swiper> 
+<!--正式  -->
+<view class="swiper-tab">
+  <view class="swiper-tab-list {{currentTab==0 ? 'on' : ''}}" data-current="0" bindtap="swichNav">简介</view>
+  <view class="swiper-tab-list {{currentTab==1 ? 'on' : ''}}" data-current="1" bindtap="swichNav">君主</view>
+  <view class="swiper-tab-list {{currentTab==2 ? 'on' : ''}}" data-current="2" bindtap="swichNav">历史事件</view>
+</view>
+
+<swiper current="{{currentTab}}" class="swiper-box" duration="300" style="height:{{winHeight - 31}}px" bindchange="bindChange">
+  <swiper-item>
+    <scroll-view scroll-y style="height:{{winHeight - 31}}px;">
+      <view class='profile'>{{profile}}</view>
+    </scroll-view>
+  </swiper-item>
+  <swiper-item>
+    <scroll-view scroll-y style="height:{{winHeight - 31}}px;">
+      <block wx:for="{{emperors}}" wx:key="{{id}}">
+        <view data-id="{{item.id}}">
+          <view data-index="{{index}}" class='title' bindtap="emperorsToggle">{{item.name}}</view>
+          <view wx:if="{{item.toggle}}">
+            <view wx:if="{{item.introduce != null && item.introduce != ''}}" class='content'>{{item.introduce}}</view>
+          </view>
+        </view>
+      </block>
+    </scroll-view>
+  </swiper-item>
+  <swiper-item>
+    <scroll-view scroll-y style="height:{{winHeight - 31}}px;">
+      <block wx:for="{{events}}" wx:key="{{id}}">
+        <view data-id="{{item.id}}">
+          <view data-index="{{index}}" class='title' bindtap="logToggle">{{item.title}}</view>
+          <view wx:if="{{item.toggle}}">
+            <view wx:if="{{item.content != null && item.content != ''}}" class='content'>{{item.content}}</view>
+          </view>
+        </view>
+      </block>
+    </scroll-view>
+  </swiper-item>
+</swiper>
